--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
 </head>
 <body>
-	<div id="pageLoader" class="position-absolute top-0 start-0 vh-100 w-100 bg-dark" style="z-index: 20000">
+	<!-- <div id="pageLoader" class="position-absolute top-0 start-0 vh-100 w-100 bg-dark" style="z-index: 20000">
 		<div class="h-50"></div>
 		<div class="offset-md-3 col-md-6">
 			<div class="progress">
 			  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressbar"></div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="container">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-12">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -60,6 +60,11 @@
 			<div class="col-md-12 d-flex flex-wrap">
 				<div class="card">
 					<div class="card-body">
+						<img class="img" src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-body">
 						<img src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
 					</div>
 				</div>
@@ -74,16 +79,42 @@
 					</div>
 				</div>
 			</div>
+		</div> -->
+		<div class="row">
+			<div class="offset-md-3 col-md-6 mt-4 border shadow-lg">
+				<div class="col">
+					<div class="progress">
+					  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressbar"></div>
+					</div>
+				</div>
+				<div id="content" class="col d-none">
+					<h1>Progress bar</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript">
-		let interval = setInterval(updateProgress, 4000)
+		let interval = setInterval(updateProgress, 3000)
 		let length = 0
 		let step = 10
 		function updateProgress(){
 			if (document.readyState == "complete") {
 				document.getElementById("progressbar").style.width = "100%"
-				setTimeout(function (){document.getElementById("pageLoader").style.display = "none"}, 2000)
+				setTimeout(function (){document.getElementById("content").classList.remove('d-none') }, 2000)
 				clearInterval(interval)
 			}else{
 				document.getElementById("progressbar").style.width = length+"%"
