--- a/index.html
+++ b/index.html
@@ -5,120 +5,87 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
 </head>
 <body>
-	<!-- <div id="pageLoader" class="position-absolute top-0 start-0 vh-100 w-100 bg-dark" style="z-index: 20000">
-		<div class="h-50"></div>
-		<div class="offset-md-3 col-md-6">
-			<div class="progress">
-			  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressbar"></div>
-			</div>
-		</div>
-	</div> -->
 	<div class="container">
-		<!-- <div class="row">
-			<div class="col-md-12">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
-			<div class="col-md-12 d-flex flex-wrap">
-				<div class="card">
-					<div class="card-body">
-						<img class="img" src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<img src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<img src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<img src="images/israel-adesanya-kelvin-gastelum-ufc-236-30.jpg">
-					</div>
-				</div>
-			</div>
-		</div> -->
 		<div class="row">
-			<div class="offset-md-3 col-md-6 mt-4 border shadow-lg">
-				<div class="col">
-					<div class="progress">
-					  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressbar"></div>
+			<div class="offset-md-3 col-md-6 mt-4">
+				<div class="card shadow">
+					<div class="card-body">
+						<div class="col">
+							<div class="progress">
+							  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressbar"></div>
+							</div>
+							<div>
+								<h6 id="percent">10%</h6>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div id="content" class="col d-none">
-					<h1>Progress bar</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
-				</div>
+			</div>
+			<div id="content" class="offset-md-3 col-md-6 mt-4 d-none">
+				<form>
+				  <div class="row mb-3">
+				    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+				    <div class="col-sm-10">
+				      <input type="email" class="form-control" id="inputEmail3">
+				    </div>
+				  </div>
+				  <div class="row mb-3">
+				    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3">
+				    </div>
+				  </div>
+				  <fieldset class="row mb-3">
+				    <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+				    <div class="col-sm-10">
+				      <div class="form-check">
+				        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+				        <label class="form-check-label" for="gridRadios1">
+				          First radio
+				        </label>
+				      </div>
+				      <div class="form-check">
+				        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+				        <label class="form-check-label" for="gridRadios2">
+				          Second radio
+				        </label>
+				      </div>
+				      <div class="form-check disabled">
+				        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+				        <label class="form-check-label" for="gridRadios3">
+				          Third disabled radio
+				        </label>
+				      </div>
+				    </div>
+				  </fieldset>
+				  <div class="row mb-3">
+				    <div class="col-sm-10 offset-sm-2">
+				      <div class="form-check">
+				        <input class="form-check-input" type="checkbox" id="gridCheck1">
+				        <label class="form-check-label" for="gridCheck1">
+				          Example checkbox
+				        </label>
+				      </div>
+				    </div>
+				  </div>
+				  <button type="submit" class="btn btn-primary">Sign in</button>
+				</form>
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript">
-		let interval = setInterval(updateProgress, 3000)
+		let interval = setInterval(updateProgress, 1000)
 		let length = 0
 		let step = 10
 		function updateProgress(){
-			if (document.readyState == "complete") {
+			if (document.readyState == "complete" && length == 100) {
 				document.getElementById("progressbar").style.width = "100%"
 				setTimeout(function (){document.getElementById("content").classList.remove('d-none') }, 2000)
 				clearInterval(interval)
 			}else{
 				document.getElementById("progressbar").style.width = length+"%"
 				length += step
+				document.getElementById("percent").innerHTML = length+"%"
 			}
 			
 		}
